[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
reqwest = { version = "*", features = ["blocking", "json"] }
colored = { version = "*" }
dotenv = "0.15.0"
clap = { version = "4.4.6", features = ["derive"] }

[dev-dependencies]
mockito = { version = "*" }
