[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"
author = "sidx04"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
reqwest = { version = "*", features = ["blocking", "json"] }
colored = { version = "*" }
dotenv = "0.15.0"
clap = { version = "4.4.6", features = ["derive"] }
config = { version = "0.14.0", features = ["ini", "json"] }

[dev-dependencies]
mockito = { version = "*" }
